 - Released 4 more PICs of 16f1824/28 family.
 - Released 4 more PICs of 16f1825/29 family.
 - Released 4 more PICs of 18f1946/47 family.
 - Released 6 more PICs of 18f87j11 family.
 - Released PICs 16f707, 16lf707 and 16f872.
 - Added device files for 16f151x and 16lf151x.
 - Added device files for 16lf1902 and 16lf1903.
 - Added device files for 16f1847 and 16lf1847.
 - Added aliases for first of multiple SPI and I2C modules to be able to use
   current SPI and I2C libraries with the first SPI and I2C module.
 - Replaced enumerated ADCS fields in ADCONx register of extended midrange
   by a multibit (bit*2 or bit*3) field.
 - Added a pseudo-variable ADCON0_ADCS for PICs which have their ADCS bits
   scattered over ADCON0 and ADCON1 registers.
 - Moved all extended midrange PICs (12/16F18/19xx, etc.) to ADC group ADC_V0.
 - Moved non device specific constants in chipdef_jallib.jal to a new file
   'constants_jallib.jal' (in /include/jal). This file is meant for all
   library-related constants and included by chipdef_jallib.jal.

externals:
 - added library for the Analog Devices AD9833 Direct Digital Synthesis Chip (external/dds)
 - sd card library changed to read/write with byte procedures instead of double byte procedures.
 - pata_hard_disk added single byte read/write
 - pata_hard_disk,and sd_card lib now has write_to_sector_address procedures
 - pata_hard_disk,sd card speed increase for fast reads, also added extra_speed constant
 - added support for custom characters on HD44780-based LCDs

peripherals:
 - ADC: * support for 18F2420/2520/4420/4520 (datasheet 39631)
        * support for 18F242/252/442/452 (datasheet 39564)
        * external vref configuration support for 18F4620 (independent/PCFG + VCFG bits)
        * external vref configuration support for 16F1827 and other PICs using ADPREF/ADNREF bits
        * improved configuration for external vref, using named constants
          (ADC_NO_EXT_VREF, ADC_VREF_POS, ADC_VREF_POS_NEG and ADC_VREF_NEG)