@@ -19,6 +19,7 @@ device files:
  - Added device files for 16f151x and 16lf151x.
  - Added device files for 16lf1902 and 16lf1903.
  - Added device files for 16f1847 and 16lf1847.
+ - Added 12 device files for 18f66K80 family.
  - Added aliases for first of multiple SPI and I2C modules to be able to use
    current SPI and I2C libraries with the first SPI and I2C module.
  - Replaced enumerated ADCS fields in ADCONx register of extended midrange
